data/derived/fa15/progs/unify/prog3071.ml.out
Characters 101-104:
  cloneHelper 0 abs(diff) @ l1
                ^^^
Error: This expression has type int -> int
       but an expression was expected of type int
